--- a/Functional Programming in CSharp/XamarinTest/XamarinTest/XamarinTest/AppShell.xaml
+++ b/Functional Programming in CSharp/XamarinTest/XamarinTest/XamarinTest/AppShell.xaml
@@ -87,6 +87,9 @@
     <FlyoutItem Title="Greet" Icon="icon_feed.png">
         <ShellContent Route="GreetPage" ContentTemplate="{DataTemplate local:GreetPage}" />
     </FlyoutItem>
+    <FlyoutItem Title="Greet" Icon="icon_feed.png">
+        <ShellContent Route="ImagePage" ContentTemplate="{DataTemplate local:ImagePage}" />
+    </FlyoutItem>
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
     <MenuItem Text="Logout" StyleClass="MenuItemLayoutStyle" Clicked="OnMenuItemClicked">
