--- a/Functional Programming in CSharp/XamarinTest/XamarinTest/XamarinTest/AppShell.xaml
+++ b/Functional Programming in CSharp/XamarinTest/XamarinTest/XamarinTest/AppShell.xaml
@@ -87,7 +87,7 @@
     <FlyoutItem Title="Greet" Icon="icon_feed.png">
         <ShellContent Route="GreetPage" ContentTemplate="{DataTemplate local:GreetPage}" />
     </FlyoutItem>
-    <FlyoutItem Title="Greet" Icon="icon_feed.png">
+    <FlyoutItem Title="Image" Icon="icon_feed.png">
         <ShellContent Route="ImagePage" ContentTemplate="{DataTemplate local:ImagePage}" />
     </FlyoutItem>
 
